--- a/dev/01-templates/04-backlinks.html
+++ b/dev/01-templates/04-backlinks.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html" class="active"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html" class="active"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -172,13 +172,13 @@ key. See <a href="./02-03-structure-modes.html">Structure Modes</a> for more inf
 <p><code>extension</code> is set to <code>md</code> as the template will be outputting Markdown.</p>
 </li>
 <li>
-<p><code>name-templates</code> can be set to anything as long as the values are identical
-between the two templates. It might seem odd to see the values for
-<code>name-templates</code> duplicated across the two templates. Shouldn't the book
-template define <code>name-templates.book</code> and the annotation template define
-<code>name-templates.annotation</code>? Ideally, yes. This need for duplication is the
-result of a current <a href="./02-05-name-templates.html#limitations">limitation</a> of ReadStor, therefore they
-<em>must</em> be identical so the backlinks are correctly generated.</p>
+<p><code>names</code> can be set to anything as long as the values are identical between
+the two templates. It might seem odd to see the values for <code>names</code> duplicated
+across the two templates. Shouldn't the book template define <code>names.book</code>
+and the annotation template define <code>names.annotation</code>? Ideally, yes. This
+need for duplication is the result of a current <a href="./02-05-names.html#limitations">limitation</a> of
+ReadStor, therefore they <em>must</em> be identical, so the backlinks are correctly
+generated.</p>
 </li>
 </ul>
 <h3 id="book-template-configuration"><a class="header" href="#book-template-configuration">Book Template Configuration</a></h3>
@@ -186,7 +186,7 @@ result of a current <a href="./02-05-name-templates.html#limitations">limitation
 context: book # &lt;- The only difference!
 structure: nested-grouped
 extension: md
-name-templates:
+names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
   annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
@@ -196,41 +196,40 @@ name-templates:
 context: annotation # &lt;- The only difference!
 structure: nested-grouped
 extension: md
-name-templates:
+names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
   annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 </code></pre>
 <h2 id="template-body"><a class="header" href="#template-body">Template Body</a></h2>
-<p>With our configuration all set up, we can now use the <code>links</code> object, which
-contains all the rendered <a href="./02-05-name-templates.html">Name Templates</a>, to link between
-our rendered output files. See <a href="./06-03-links.html">Context Reference - Links</a> for more
-information.</p>
+<p>With our configuration all set up, we can now use the <code>names</code> object, which
+contains all the rendered <a href="./06-03-names.html">Names</a>, to link between our rendered output
+files. See <a href="./06-03-names.html">Context Reference - Names</a> for more information.</p>
 <h3 id="book-template-body"><a class="header" href="#book-template-body">Book Template Body</a></h3>
-<p>The <code>links.annotation</code> object is a dictionary of key:value pairs where the key
-is the annotation's <code>id</code> and the value is the rendered output of the
-<code>name-templates.annotation</code> template. Here, the <code>id</code> is being discarded by
-declaring it an <code>_</code> (by convention only) and never actually using it.</p>
+<p>The <code>names.annotation</code> object is a dictionary of key:value pairs where the
+key is the annotation's <code>id</code> and the value is the rendered output of the
+<code>names.annotation</code> template. Here, the <code>id</code> is being discarded by declaring it
+an <code>_</code> (by convention only) and never actually using it.</p>
 <pre><code class="language-jinja2"># {{ book.author }} - {{ book.title }}
 
-{% for _, link in links.annotations -%}
-![[{{ link }}]]
+{% for name in names.annotations -%}
+![[{{ name.filename }}]]
 {% endfor %}
 </code></pre>
-<p>Alternatively we can use the <code>links.directory</code> variable to access the rendered
+<p>Alternatively we can use the <code>names.directory</code> variable to access the rendered
 name of the parent directory. This value is only available if the
 <a href="./02-03-structure-modes.html">Structure Mode</a> is set to <code>nested</code> or <code>nested-grouped</code>.</p>
 <!-- TODO: Verify this works! -->
 <pre><code class="language-jinja2"># {{ book.author }} - {{ book.title }}
 
-{% for _, link in links.annotations -%}
-![[{{ links.directory }}/{{ link }}]]
+{% for name in names.annotations -%}
+![[{{ name.directory }}/{{ name.filename }}]]
 {% endfor %}
 </code></pre>
 <h3 id="annotation-template-body"><a class="header" href="#annotation-template-body">Annotation Template Body</a></h3>
-<p>Finally, using the <code>links.book</code> variable we're able to link back to the source
+<p>Finally, using the <code>names.book</code> variable we're able to link back to the source
 book.</p>
-<pre><code class="language-jinja2"># [[{{ links.book }}]]
+<pre><code class="language-jinja2"># [[{{ names.book }}]]
 
 {{ annotation.body }}
 
